got it working with angular material and cdk

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,10 @@
   <div class="form-group" [ngClass]="{'has-error': (!content.valid && content.touched), 'has-success': (content.valid && content.touched)}">
     <quill-editor class="form-control" [formControl]="content" [options]="editorConfig"></quill-editor>
   </div>
+
+  <mat-form-field>
+    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
 </form>
